--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -166,4 +166,10 @@
     border: 2px dashed #b0b0c0;
     border-radius: 50%;
   }
+
+  button[disabled] {
+    opacity: 0.3 !important;
+    cursor: not-allowed !important;
+    filter: grayscale(100%);
+  }
 }
